--- a/client/main.css
+++ b/client/main.css
@@ -1,3 +1,31 @@
 body {
   font-family: sans-serif;
 }
+
+#react-target {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+}
+
+.tooltip {
+  pointer-events: none;
+  position: absolute;
+  z-index: 9;
+  font-size: 12px;
+  padding: 8px;
+  background: #000;
+  color: #fff;
+  min-width: 160px;
+  max-height: 240px;
+  overflow-y: hidden;
+}
+
+.tooltip.interactive {
+  pointer-events: all;
+  background: #fcfcfc;
+  color: #444;
+  overflow-y: auto;
+}
